# EldenSheet

./: .clang-format  .gitattributes  .gitignore  config.in  meson.build  meson_options.txt
libs/imgui/: meson.build
src/: app.cpp  app.hpp  graphics.h  main.cpp  meson.build
src/core/: context.c  context.h  core.c  core.h  display.c  display.h  imgui_layer.cpp  imgui_layer.hpp  instance.c  instance.h  meson.build  renderer.c  renderer.h  window.c  window.h
src/core/shaders/: generate_spv.bat  precompiled.h
src/core/tmp/: app.cpp  app.hpp  context.c  context.h  display.c  display.h  graphics.c  window.c
